--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
             </svg>
             <div class="header-content">
                 <div class="left-header">
-                    <h1>Martin Zaïdi</h1>
+                    <h1 class="name">Martin Zaïdi</h1>
                     <p class="subtitle">Data Scientist</p>
-                    <p class="summary">Ayant collaboré avec des acteurs clés dans l'industrie aéronautique et technologique, je combine compétences techniques et compréhension des besoins métier pour transformer les données en insights stratégiques. Data Scientist et Database Engineer avec 3 ans d'expérience dans le développement de solutions de data science, l'optimisation de pipelines de données, et la conception de modèles prédictifs. Autonome en Python, SQL et visualisation de données, avec une solide expérience en machine learning et NLP. Passionné par l'innovation, je suis à la recherche d'opportunités en CDI ou CDD pour relever de nouveaux défis techniques et stratégiques.</p>
+                    <p class="summary">Ayant collaboré avec des acteurs clés dans l'industrie aéronautique et technologique, je combine compétences techniques et compréhension des besoins métier pour transformer les données en insights stratégiques. Passionné par l'innovation, je suis à la recherche d'opportunités en CDI ou CDD pour relever de nouveaux défis techniques et stratégiques.</p>
                 </div>
                 <div class="right-header">
                     <p>Toulouse<i class="fas fa-map-marker-alt"></i></p>
@@ -59,18 +59,18 @@
                         <div class="skill">Python</div>
                         <div class="skill">SQL</div>
                         <div class="skill">PySpark</div>
-                        <div class="skill">Visualisation de données (Tableau, matplotlib, seaborn)</div>
-                        <div class="skill">Méthodes Agiles et gestion de projets</div>
+                        <div class="skill">Visualisation de données</div>
+                        <div class="skill">Tableau</div>
+                        <div class="skill">Matplotlib, Seaborn</div>
+                        <div class="skill">Méthodes Agiles</div>
                     </div>
                 </div>
                 <div class="info-section">
                     <h2><i class="fa-solid fa-graduation-cap"></i>Formation</h2>
-                    <p><strong class="job-title">Master en Mathématiques Appliquées</strong><br>
-                        <span class="company">Université Paul Sabatier - Toulouse</span><br>
-                        <span class="dates">2019 - 2022</span></p>
-                    <p><strong class="job-title">Licence en Sciences Fondamentales et Appliquées</strong><br>
-                        <span class="company">Université Paul Sabatier - Toulouse</span><br>
-                        <span class="dates">2015 - 2019</span></p>
+                    <p><strong class="job-title">Master en Mathématiques Appliquées</strong> – 
+                        <span class="company">Université Paul Sabatier, Toulouse</span> <span class="dates">(2019 - 2022)</span></p>
+                    <p><strong class="job-title">Licence en Sciences Fondamentales et Appliquées</strong> – 
+                        <span class="company">Université Paul Sabatier - Toulouse</span><span class="dates">(2015 - 2019)</span></p>
                 </div>
                 <div class="info-section">
                     <h2><i class="fa-solid fa-language"></i> Langues</h2>
@@ -82,7 +82,7 @@
                         </div>
                         <div class="language">
                             <p>Anglais<br>
-                                <span class="language-details">C1 (CECRL) – Communication fluide, y compris sur des sujets techniques</span>
+                                <span class="language-details">C1 (CECRL)</span>
                             </p>
                         </div>
                     </div>
@@ -92,9 +92,7 @@
                     <p><strong class="job-title">Rugby</strong><br>
                         <span class="job-details">Pratiqué depuis l’enfance et au niveau universitaire pendant 3 ans, développant esprit d’équipe et discipline.</span></p>
                     <p><strong class="job-title">Développement d’outils personnels</strong><br>
-                        <span class="job-details">Création de solutions techniques innovantes, comme un programme OCR pour capturer et reconstruire automatiquement les notes de cours Zoom, et des modèles de machine learning.</span></p>
-                    <p><strong class="job-title">Randonnée et nature</strong><br>
-                        <span class="job-details">Passionné par les sports de plein air, reflétant endurance et goût du défi.</span></p>
+                        <span class="job-details">Création de solutions techniques innovantes, comme un programme pour reconstruire automatiquement les notes de cours Zoom, et des modèles de machine learning.</span></p>
                 </div>
             </div>
 
@@ -102,7 +100,7 @@
             <div class="right-column">
                 <div class="info-section">
                     <h2><i class="fa-solid fa-briefcase"></i>Expérience professionnelle</h2>
-                    <p><strong class="job-title">Database Engineer</strong><br>
+                    <p><strong class="job-title">Database Engineer</strong> – 
                         <span class="company">ALTEN</span><br>
                         <span class="dates">Octobre 2023 – Aujourd'hui</span></p>
                     <ul>
@@ -112,7 +110,7 @@
                         <li>Mise en place de processus de gouvernance des données.</li>
                     </ul>
 
-                    <p><strong class="job-title">Data Scientist</strong><br>
+                    <p><strong class="job-title">Data Scientist</strong> – 
                         <span class="company">ALTEN</span><br>
                         <span class="dates">Octobre 2023 – Décembre 2023</span></p>
                     <ul>
@@ -121,15 +119,7 @@
                         <li>Analyse ACP pour réduire la dimensionnalité et identifier les relations clés.</li>
                     </ul>
 
-                    <p><strong class="job-title">Ingénieur en Modélisation et Ontologies</strong><br>
-                        <span class="company">ALTEN</span><br>
-                        <span class="dates">Février 2023 – Juin 2023</span></p>
-                    <ul>
-                        <li>Intégration de modèles MBSE en collaboration avec Airbus.</li>
-                        <li>Analyse de faisabilité et couplage entre modèles conceptuels et applications directes.</li>
-                    </ul>
-
-                    <p><strong class="job-title">Data Scientist</strong><br>
+                    <p><strong class="job-title">Data Scientist</strong> – 
                         <span class="company">ALTEN</span><br>
                         <span class="dates">Septembre 2022 – Février 2023</span></p>
                     <ul>
